# beaver

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ABOUT.md  CITATION.cff  CONCEPTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  pytest.ini  wsgi.py
.github/actions/install-env/: action.yml
.github/workflows/: code-quality.yml  main.yml
api/: init_db.py  playground.ipynb  pyproject.toml
api/api/: db.py  experiments.py  feature_sets.py  features.py  main.py  models.py  processors.py  runners.py  settings.py  sinks.py  sources.py  targets.py  tasks.py
beaver/: Dockerfile  __init__.py  app.py  dam.py  data_store.py  db.py  enums.py  flavors.py  ingredients.py  logic.py  loop.py  main.py  model.py  model_envelope.py  model_store.py  settings.py  test_data_store.py  training.py  types.py
beaver/api/: __init__.py  client.py  experiment.py  feature_set.py  job_runner.py  message_bus.py  project.py  server.py  stream_processor.py  target.py
beaver/core/: logic.py  main.py
beaver/core/api/: __init__.py  experiment.py  feature_set.py  job_runner.py  message_bus.py  project.py  stream_processor.py  target.py
beaver/core/models/: feature_set.py  job_runner.py
beaver/infra/: __init__.py  job_runner.py  message_bus.py  stream_processor.py
beaver/models/: __init__.py  base.py  experiment.py  feature_set.py  job.py  job_runner.py  message_bus.py  project.py  stream_processor.py  target.py
beaver/sdk/: project.py
beaver/tests/: test_api.py  test_logic.py
beaver/tests/scenarios/: test_phishing.py
beaver/views/: cumulative_metrics.sql  labelled_events.sql  labelled_predictions.sql  metrics.sql  sliding_metrics.sql  ticks.sql
beaver_sdk/: README.md  pyproject.toml
core/: README.md  init_db.py  playground.ipynb  pyproject.toml
core/api/: enums.py  experiments.py  main.py  models.py  processors.py  projects.py  sinks.py  sources.py
core/api/infra/: __init__.py  message_bus.py  stream_processor.py
core/core/: db.py  enums.py  logic.py  main.py  old_logic.py
core/core/api/: __init__.py  experiment.py  feature_set.py  job_runner.py  message_bus.py  project.py  stream_processor.py  target.py  task_runner.py
core/core/infra/: __init__.py  job_runner.py  message_bus.py  stream_processor.py  task_runner.py
core/core/models/: __init__.py  base.py  experiment.py  feature_set.py  job.py  job_runner.py  message_bus.py  project.py  stream_processor.py  target.py  task_runner.py
core/new/: test_main.py
core/tests/: test_api.py  test_logic.py
core/tests/scenarios/: test_phishing.py
dashboard/grafana_volume/: grafana.db
dashboard/grafana_volume/alerting/1/: __default__.tmpl
dashboard/telegraf/: telegraf.conf
examples/: wsgi.py
examples/batch-trees/: README.md  run.py
examples/taxis/: README.md  playground.ipynb  requirements.txt  server.py  simulate.py  simulate_traffic.py  test.ipynb  train.py  tutorial.ipynb  upload_model.py  upload_models.py
helm/beaver/: Chart.yaml  values.yaml
helm/beaver/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/beaver/templates/tests/: test-connection.yaml
ocean/: __init__.py  app.py  data_store.py  ingredients.py  model.py  model_store.py  recipes.py
ocean/api/: client.py  server.py
sdk/: README.md  pyproject.toml
sdk/beaver_sdk/: __init__.py
ui/: Dockerfile  Home.py  README.md  app.vue  main.py  nuxt.config.ts
ui/pages/: 1_🧪_Projects.py  2_⚙️_Infrastructure.py  index.vue
ui/pages/experiments/: [id].vue  index.vue
ui/pages/features/: [id].vue  index.vue
ui/pages/models/: [id].vue  index.vue
ui/pages/processors/: [id].vue  index.vue
ui/pages/runners/: [id].vue  index.vue
ui/pages/serving/: index.vue
ui/pages/sinks/: [id].vue  index.vue
ui/pages/sources/: [id].vue  index.vue
ui/pages/targets/: [id].vue  index.vue
