[tool.poetry]
name = "beaver"
version = "0.1.0"
description = "MLOps for online machine learning"
authors = ["Max Halford <maxhalford25@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.9"
dataclasses-json = "^0.5.6"
SQLAlchemy = "^1.4.32"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
python-multipart = "^0.0.5"
dill = "^0.3.4"
requests = "^2.27.1"
river = "^0.10.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
pytest = "^7.1.1"
ipykernel = "^6.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
